Import inputs with label and restructure

--- a/src/index.mdx
+++ b/src/index.mdx
@@ -1,6 +1,8 @@
 ---
-name: My Project
+name: Welcome
 route: /
 ---
 
-# Welcome to the living styleguide of my-project
+# Welcome to the living styleguide for IDYEAHS
+
+Use the menu on the left to review the various components of this application
